--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
 <body>
 
   <div class="alert-banner">
-    🦖 [RAPPEL DU REX] 
-Chers livreurs,
-à la fin de votre tournée, merci de ramener le camion dans un état plus présentable qu’un steak tartare !
+    🦖 [RAPPEL DU REX] </strong><br>
+Chers livreurs,<br>
+A la fin de votre tournée, merci de ramener le camion dans un état plus présentable qu’un steak tartare !<br>
 
-✅ Carburant rempli (pas juste un fond de réservoir façon mojito)
-✅ Réparations faites (un rétro en moins n’est PAS une option aérodynamique)
-✅ Camion vidé (non, vos frites froides et gobelets vides ne font pas partie de l’inventaire)
+✅ Carburant rempli (pas juste un fond de réservoir façon mojito)<br>
+✅ Réparations faites (un rétro en moins n’est PAS une option aérodynamique)<br>
+✅ Camion vidé (non, vos frites froides et gobelets vides ne font pas partie de l’inventaire)<br>
 
-Parce qu’on est peut-être des dinos, mais on roule pas à l’âge de pierre !
+Parce qu’on est peut-être des dinos, mais on roule pas à l’âge de pierre !<br>
 
-Merci pour votre professionnalisme,
+Merci pour votre professionnalisme,<br>
 et n’oubliez pas : un camion bien entretenu, c’est un T-Rex content.
   </div>
 
